[gd_scene load_steps=9 format=3 uid="uid://bp8wd0pk0cj58"]

[ext_resource type="Script" path="res://Character/Player/Inventory/mini_inventory.gd" id="1_41jg7"]
[ext_resource type="Texture2D" uid="uid://re41tnvaqcbf" path="res://asset/control/InventorySlots.png" id="1_atx4c"]
[ext_resource type="PackedScene" uid="uid://5xltbkvfg7nt" path="res://Character/Player/Inventory/Inv_UI_Slot.tscn" id="2_v4osw"]
[ext_resource type="Texture2D" uid="uid://ucpj34jti2qc" path="res://asset/control/transparentLight31.png" id="3_jpy44"]
[ext_resource type="Texture2D" uid="uid://cx60oappfqfcj" path="res://asset/control/panel_brown.png" id="4_jdl8j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jdf1v"]
size = Vector2(22, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0buyl"]
size = Vector2(22, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87q6r"]
size = Vector2(22, 21)

[node name="MiniInventory" type="Control"]
custom_minimum_size = Vector2(159, 57)
layout_mode = 3
anchors_preset = 0
offset_right = 159.0
offset_bottom = 57.0
script = ExtResource("1_41jg7")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 115.0
offset_bottom = 41.0
texture = ExtResource("1_atx4c")

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.399
anchor_top = 0.526
anchor_right = 0.399
anchor_bottom = 0.526
offset_left = -35.885
offset_top = -9.566
offset_right = 35.115
offset_bottom = 11.434
columns = 3

[node name="Inventory_UI_Slot" parent="NinePatchRect/GridContainer" instance=ExtResource("2_v4osw")]
layout_mode = 2
mouse_filter = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="NinePatchRect/GridContainer/Inventory_UI_Slot"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.21, 0.21)
texture_normal = ExtResource("4_jdl8j")

[node name="Area2D" type="Area2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot/Area2D"]
position = Vector2(11, 11.5)
shape = SubResource("RectangleShape2D_jdf1v")

[node name="Inventory_UI_Slot2" parent="NinePatchRect/GridContainer" instance=ExtResource("2_v4osw")]
layout_mode = 2
mouse_filter = 1

[node name="TouchScreenButton2" type="TouchScreenButton" parent="NinePatchRect/GridContainer/Inventory_UI_Slot2"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.21, 0.21)
texture_normal = ExtResource("4_jdl8j")

[node name="Area2D2" type="Area2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot2/Area2D2"]
position = Vector2(11, 11.5)
shape = SubResource("RectangleShape2D_0buyl")

[node name="Inventory_UI_Slot3" parent="NinePatchRect/GridContainer" instance=ExtResource("2_v4osw")]
layout_mode = 2
mouse_filter = 1

[node name="TouchScreenButton3" type="TouchScreenButton" parent="NinePatchRect/GridContainer/Inventory_UI_Slot3"]
self_modulate = Color(1, 1, 1, 0)
scale = Vector2(0.21, 0.21)
texture_normal = ExtResource("4_jdl8j")

[node name="Area2D3" type="Area2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NinePatchRect/GridContainer/Inventory_UI_Slot3/Area2D3"]
position = Vector2(11, 11.5)
shape = SubResource("RectangleShape2D_87q6r")

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2(83, 11)
scale = Vector2(0.45996, 0.45996)
texture_normal = ExtResource("3_jpy44")

[node name="Sprite2D" type="Sprite2D" parent="."]
top_level = true

[connection signal="pressed" from="NinePatchRect/GridContainer/Inventory_UI_Slot/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="released" from="NinePatchRect/GridContainer/Inventory_UI_Slot/TouchScreenButton" to="." method="_on_touch_screen_button_released"]
[connection signal="mouse_entered" from="NinePatchRect/GridContainer/Inventory_UI_Slot/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/GridContainer/Inventory_UI_Slot2/TouchScreenButton2" to="." method="_on_touch_screen_button_2_pressed"]
[connection signal="released" from="NinePatchRect/GridContainer/Inventory_UI_Slot2/TouchScreenButton2" to="." method="_on_touch_screen_button_2_released"]
[connection signal="mouse_entered" from="NinePatchRect/GridContainer/Inventory_UI_Slot2/Area2D2" to="." method="_on_area_2d_2_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/GridContainer/Inventory_UI_Slot3/TouchScreenButton3" to="." method="_on_touch_screen_button_3_pressed"]
[connection signal="released" from="NinePatchRect/GridContainer/Inventory_UI_Slot3/TouchScreenButton3" to="." method="_on_touch_screen_button_3_released"]
[connection signal="mouse_entered" from="NinePatchRect/GridContainer/Inventory_UI_Slot3/Area2D3" to="." method="_on_area_2d_3_mouse_entered"]
[connection signal="pressed" from="TouchScreenButton" to="." method="more_item"]
